<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:text="@string/score"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewScore2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/score_number"
            android:textColor="@color/green_light"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewScorePlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="+1"
            android:textColor="@color/green_light"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textViewScoreMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="-1"
            android:textColor="@android:color/holo_red_light"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="gone" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewExampleNumberOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5"
            android:textColor="@color/black"
            android:textSize="80sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewExamplePlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="+"
            android:textColor="@color/black"
            android:textSize="80sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewExampleNumberTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5"
            android:textColor="@color/black"
            android:textSize="80sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewExampleRavno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:text="= ?"
            android:textColor="@color/black"
            android:textSize="80sp"
            android:textStyle="bold" />

    </LinearLayout>

    <EditText
        android:id="@+id/editTextInputAnswer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginVertical="20dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:autofillHints=""
        android:textSize="24sp"
        android:textStyle="italic"
        android:hint="@string/hint_answer"
        android:inputType="number" />

    <Button
        android:id="@+id/buttonEnterAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="20dp"
        android:text="@string/button_enter"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewCorrectAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="25dp"
        android:background="@color/green_light"
        android:gravity="center"
        android:paddingVertical="25dp"
        android:text="@string/correct_answer"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textViewIncorrectAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="25dp"
        android:background="@android:color/holo_red_light"
        android:gravity="center"
        android:paddingVertical="25dp"
        android:text="@string/incorrect_answer"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:visibility="gone" />


</LinearLayout>